2004-11-13  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh (record_check): New function, should be called
	from within package.ac files to report whether a wrapper can be
	built or not.
	(report_checks): New function, called after the packages have made
	their checks. Will report which wrappers can be built and which
	are missing prereqs, and error out if no package can be built.
	(release_manager): New global, defines the subdir of configs/ from
	which the official releases come.
	(get_version): New function, computes the version of a package. If
	no VERSION file is present in a subpackage, or more than one is
	present, default to a timestamp.
	(autogen_pkg): Always use guile-gnome-$pkg as the package name.
	Append +$source to the version if the source is not the
	$release_manager.

2004-11-11  Andy Wingo  <wingo@pobox.com>

	* common.mk (%.scm guile-gnome-gw-%.c): Before loading g-wrap,
	load (gnome-@API_VERSION@). This will make sure that, when
	building against an installed guile-gnome, guile-gnome of the
	right version is available. My English sucks!

2004-10-29  Andy Wingo  <wingo@pobox.com>

	* common.mk: pkg-config versioning voodoo.

2004-10-26  Andy Wingo  <wingo@pobox.com>

	* common.mk: No more $guiledir, but there is $guilegnomedir, which
	is $datadir/guile-gnome-$apiversion. Adapt guilemoduledir ad
	guilegwmoduledir accordingly.

	* autogen-pkg.sh: No more --with-guiledir, we install to
	$datadir/guile-gnome-$apiversion.
	(API_VERSION): New substituted variable, the API version. Constant
	iff a release is backward compatible with the previous one. Starts
	at 0.

2004-10-17  Andy Wingo  <wingo@pobox.com>

	* common.mk (guilemoduledir, guilegwmoduledir): Get $guiledir from
	--with-guile-dir.

	* autogen-pkg.sh: Add --with-guiledir option to control install
	location of guile modules. Default PREFIX/share/guile/site.

2004-10-24  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh (sort_pkgs): Fix it right this time.
