@@ -1,3 +1,12 @@
+2004-11-15  Andy Wingo  <wingo@pobox.com>
+
+	* autogen-pkg.sh (record_check): Quote the bad value.
+	Check for --prefix; if none is given, barf. People should be aware
+	of guile's deficiencies.
+
+	* autogen.sh: 
+	* autogen-support.sh (--only-genconfigure): New option.
+
 2004-11-13  Andy Wingo  <wingo@pobox.com>
 
 	* autogen-pkg.sh (record_check): New function, should be called
